@@ -1,3 +1,4 @@
+	* fixed add_node python binding
 	* fixed issue where trackers wouldn't tried immediately when the previous one failed
 	* fixed synchronization issue between download queue and piece picker
 	* fixed bug in udp tracker scrape response parsing
